<resources>
    <string name="app_name">AlmaSoft</string>
    <string name="lbl_InicioSesion">Inicio de Sesión</string>
    <string name="lbl_AunRegistrado">¿Aún no estas registrado?</string>
    <string name="textViewRegistrarUsuario">Registro de Usuario</string>
    <string name="textViewGestionarUsuario">Gestionar Usuario</string>
    <string name="textViewConsultarUsuario">CONSULTAR</string>
    <string name="textViewEliminarUsuario">ELIMINAR</string>
    <string name="textViewActualizarUsuario">ACTUALIZAR</string>
    <string name="textViewNombre">Nombre: </string>
    <string name="textViewApellidoM">Apellido Materno: </string>
    <string name="textViewApellidoP">Apellido Paterno: </string>
    <string name="textViewCodUsuario">Usuario: </string>
    <string name="textViewContraseña">Contraseña: </string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_IdConsultar"></string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="btn_ingresar">Iniciar Sesión</string>
    <string name="btn_gestion">Gestión</string>
    <string name="btn_consultar">Consultar</string>
    <string name="btn_Idconsultar">Consultar</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_reiniciar">Reiniciar</string>
    <string name="lbl_registrarse">Registrarse Ahora!</string>
    <string name="IB">Información</string>
    <string name="TextNombre">Nombre: </string>

    <string name="TextListarProvedor">LISTAR PROVEEDOR</string>
    <string name="TexNombreCodigo">Codigo o nombre</string>
    <string name="TexProducto">PRODUCTO</string>
    <string name="TexProveedor">PROVEEDOR</string>
    <string name="TextEditarProvedor">Editar Proveedor</string>
    <string name="TextProductoNuevo">NUEVO PRODUCTO</string>
    <string name="TextProvedorNuevo">NUEVO PROVEEDOR</string>
    <string name="TextProvedorNombre">Nombre</string>
    <string name="TextProvedorRuc">Ruc</string>
    <string name="TextProvedorDir">Direccion</string>
    <string name="TextProveedorCuidad">Ciudad</string>

    <string name="BtnIngresar">Iniciar Sesión</string>
    <string name="Btnregresar">Regresar</string>
    <string name="BtnBuscar">Buscar</string>
    <string name="Btnregistrar">Registrar</string>
    <string name="Btnreiniciar">Reiniciar</string>
    <string name="BtnGuardar">Guardar</string>
    <string name="precio_de_compra">Precio de Compra</string>
    <string name="precio_p_blico">Precio Público</string>
    <string name="sale_price">Precio Público</string>
    <string name="title_movement">REPORTE DE MOVIMIENTOS</string>
    <string name="reporte_button">Reportes</string>

    <string-array name="location_array">
        <item>Ubicación 1</item>
        <item>Ubicación 2</item>
        <item>Ubicación 3</item>
        <item>Ubicación 4</item>
        <item>Ubicación 5</item>
        <!-- Añade más ubicaciones según sea necesario -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>