<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ConsultarActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginBottom="50px"
        android:text="@string/textViewConsultarUsuario"
        android:textAlignment="center"
        android:textColor="@color/MarronOscuro"
        android:textSize="48sp" />

    <ListView
        android:id="@+id/list_usuarios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ID:"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ct_id_consultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txt_IdConsultar" />

        <Button
            android:id="@+id/btn_consultar_consultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10px"
            android:layout_weight="1"
            android:backgroundTint="@color/MarronOscuro"
            android:text="@string/btn_Idconsultar"/>
    </LinearLayout>
</LinearLayout>