<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

        <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/LogoDescripcion"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TextNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/TextNombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/TextProvedorNombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextRuc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/TextProvedorRuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/TextNombre" />

    <TextView
        android:id="@+id/TextDireccion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/TextProvedorDir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/TextRuc" />

    <TextView
        android:id="@+id/TextCiudad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/TextProveedorCuidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/TextDireccion" />

    <!-- LinearLayout for buttons -->
    <LinearLayout
        android:id="@+id/ButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextCiudad"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eliminar"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/btnMostrarContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mostrar Contrato"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
