<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context="view.RegistrarProveedorActivity">

    <TextView
        android:id="@+id/textViewRegistrarProveedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="40dp"
        android:text="@string/TextProvedorNuevo"
        android:textAlignment="center"
        android:textColor="@color/MarronOscuro"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="389dp"
        android:background="@drawable/user"
        android:contentDescription="@string/LogoDescripcion"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrarProveedor" />

    <Button
        android:id="@+id/btnGuardarContrato"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/BtnGuardarContrato"
        app:layout_constraintStart_toStartOf="@+id/btnCargarLogo"
        app:layout_constraintTop_toBottomOf="@+id/btnCargarLogo" />

    <Button
        android:id="@+id/btnCargarLogo"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/BtnCargarLogo"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrarProveedor" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="29dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout8"
        tools:ignore="PxUsage,RtlHardcoded">


    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="79dp"
        android:layout_weight="1"
        android:backgroundTint="@color/MarronOscuro"
        android:text="@string/Btnregistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegresar"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="19dp"
        android:layout_weight="1"
        android:backgroundTint="@color/MarronOscuro"
        android:text="@string/Btnregresar"
        app:layout_constraintEnd_toStartOf="@+id/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        tools:ignore="ButtonStyle" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="388dp"
        android:layout_height="194dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        tools:ignore="PxUsage">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TextNombre"
                android:textColor="@color/MarronOscuro"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="266dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill,InefficientWeight,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRuc"
                android:layout_width="90dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/TextProvedorRuc"
                android:textColor="@color/MarronOscuro"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/txtRuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="11"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDireccion"
                android:layout_width="90dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/TextProvedorDir"
                android:textColor="@color/MarronOscuro"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCiudad"
                android:layout_width="90dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/TextProveedorCuidad"
                android:textColor="@color/MarronOscuro"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>